--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,6 +92,10 @@ disallow_any_unimported = false
 no_implicit_optional = true
 check_untyped_defs = true
 strict_optional = true
+# Additional strict options
+warn_unreachable = true
+warn_no_return = true
+strict_equality = true
 
 [tool.pytest.ini_options]
 minversion = "8.0"
