--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,6 @@
-# CI — lint, type-check, test, and build the Python SDK package.
+# CI — lint, type-check, test, integration test, build, and auto-publish.
+# Runs on pushes to main and all PRs.
+# Auto-publishes to PyPI when version in pyproject.toml changes (main only).
 
 name: CI
 
@@ -22,6 +24,68 @@ jobs:
       - run: uv run mypy m8tes/
       - run: uv run pytest -m "not e2e and not smoke and not integration" --cov=m8tes --cov-report=term
 
+  integration:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      # Check out the applications repo for the backend (sparse: fastapi/ only)
+      - uses: actions/checkout@v4
+        with:
+          repository: m8tes-ai/applications
+          token: ${{ secrets.APPLICATIONS_TOKEN }}
+          path: applications
+          sparse-checkout: |
+            fastapi
+
+      - uses: astral-sh/setup-uv@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install backend
+        working-directory: applications/fastapi
+        run: uv sync
+
+      - name: Start backend
+        working-directory: applications/fastapi
+        env:
+          DATABASE_URL: "sqlite:///test_integration.db"
+          SECRET_KEY: "ci-test-secret-key-for-integration-tests-only"
+          ENCRYPTION_KEY: "IT91Cr0NKwhSPtZ8P2gToENoXV1LopwX6kFxQeV939c="
+          ANTHROPIC_API_KEY: "test-key"
+          TESTING: "true"
+          USE_SANDBOX_EXECUTION: "false"
+          COMPOSIO_API_KEY: ""
+          RESEND_API_KEY: ""
+          POSTHOG_API_KEY: ""
+          SENTRY_DSN: ""
+          LOG_TO_FILE: "false"
+        run: |
+          uv run python -c "
+          from app.models.base import Base
+          from app.database import engine
+          import app.models
+          Base.metadata.create_all(bind=engine)
+          "
+          uv run uvicorn main:app --host 0.0.0.0 --port 8000 > /tmp/backend.log 2>&1 &
+          for i in $(seq 1 30); do
+            curl -sf http://localhost:8000/health && break
+            sleep 1
+          done
+          curl -sf http://localhost:8000/health || (echo "Backend failed to start"; cat /tmp/backend.log; exit 1)
+
+      - name: Run integration tests
+        env:
+          E2E_BACKEND_URL: "http://localhost:8000"
+        run: |
+          uv sync --extra dev
+          uv run pytest -m integration -v
+
+      - name: Show backend logs on failure
+        if: failure()
+        run: cat /tmp/backend.log || true
+
   build:
     runs-on: ubuntu-latest
     needs: test
@@ -33,3 +97,37 @@ jobs:
       - run: pip install build twine
       - run: python -m build
       - run: twine check dist/*
+
+  publish:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: [test, integration, build]
+    runs-on: ubuntu-latest
+    environment: pypi
+    permissions:
+      id-token: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Check if version exists on PyPI
+        id: version_check
+        run: |
+          VERSION=$(python -c "import tomllib; print(tomllib.load(open('pyproject.toml','rb'))['project']['version'])")
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+          if curl -sf "https://pypi.org/pypi/m8tes/$VERSION/json" > /dev/null 2>&1; then
+            echo "exists=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "exists=false" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Build package
+        if: steps.version_check.outputs.exists == 'false'
+        run: |
+          pip install build
+          python -m build
+
+      - name: Publish to PyPI
+        if: steps.version_check.outputs.exists == 'false'
+        uses: pypa/gh-action-pypi-publish@release/v1
