--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      exists: ${{ steps.version_check.outputs.exists }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -21,13 +23,27 @@ jobs:
           python-version: "3.11"
       - run: pip install build
       - run: python -m build
+
+      - name: Check if version exists on PyPI
+        id: version_check
+        run: |
+          VERSION=$(python -c "import tomllib; print(tomllib.load(open('pyproject.toml','rb'))['project']['version'])")
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+          if curl -sf "https://pypi.org/pypi/m8tes/$VERSION/json" > /dev/null 2>&1; then
+            echo "exists=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "exists=false" >> "$GITHUB_OUTPUT"
+          fi
+
       - uses: actions/upload-artifact@v4
+        if: steps.version_check.outputs.exists == 'false'
         with:
           name: dist
           path: dist/
 
   publish:
     needs: build
+    if: needs.build.outputs.exists == 'false'
     runs-on: ubuntu-latest
     environment: pypi
     permissions:
